--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@
     /* Cinza para bordas */
     --cor-destaque: #9e9e9e;
     /* Cinza mais suave para links e botões */
+   
 }
 
 body {
@@ -35,11 +36,15 @@ header {
     width: 100%;
     display: flex;
     justify-content: center;
-    background-color: var(--cor-fundo);
+    background-color: rgba(61, 61, 61, 0);
+    backdrop-filter: blur(4px);
+    position: fixed;
+    border-bottom: 1px solid #424242;
+    z-index: 1;
 
     nav {
         width: 100%;
-        max-width: 1150px;
+        max-width: 1350px;
         display: flex;
         align-items: center;
         justify-content: space-between;
@@ -62,20 +67,38 @@ header {
     }
 
     li a {
+        font-size: 14px;
         display: flex;
         align-items: center;
-        padding: 10px;
+        padding: 10px 0;
+        margin: 0 10px;
         text-decoration: none;
-        color: var(--cor-texto);
-        transition: .3s ease-in;
+        color: rgb(208, 209, 208);
+        transition: .2s ease-in;
+        position: relative;
     }
-
-    li a:hover {
-        color: #c9c9c9;
+ .sec:hover{
+    color: rgb(255, 255, 255);
+    transform: scale(1.1);
+ }
+   .sec::after{
+        content: '';
+        background-color: white;
+        height: 1.5px;
+        position: absolute;
+        left: 0; 
+        bottom: 0;
+        width: 0%;
+        transition: .2s ease;
+    }
+    
+    .sec:hover::after {
+        
+        width: 100%;
     }
 
     li a svg {
-        width: 20px;
+        width: 14px;
         height: 20px;
         margin-right: 5px;
     }
@@ -89,25 +112,40 @@ header {
     border-radius: 20px;
     font-weight: 600;
     font-size: 14px;
+    transition: .3s ease;
+    border: 1px solid transparent;
+    display: flex;
+    align-items: center;
+}
+.curri:hover{
+    background-color: #979696;
+    color: #f5f3f3;
+    border: 1px solid white;
+    /* transform: scale(1.1); */
 }
 
 main {
     width: 100%;
-    background-color: var(--cor-fundo);
+    /* background-color: var(--cor-fundo); */
 }
-
-section {
+.info-main{
+    background-color: var(--cor-fundo);
+    position: relative;
+    z-index: -2;
+}
+section .content{
     width: 100%;
     max-width: 1150px;
     margin: 0 auto;
 }
 
-.info-main {
-    padding: 145.5px 16px;
+.content {
+    padding: 220px 16px 146.6px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     gap: 10px;
+    /* background-color: var(--cor-fundo); */
 }
 
 .info-left {
@@ -121,7 +159,7 @@ section {
         font-size: 40px;
     }
 
-    .magiic {
+    .magic {
         display: flex;
         align-items: center;
         justify-content: center;
@@ -131,12 +169,42 @@ section {
         color: var(--cor-fundo);
         background-color: var(--cor-texto);
         font-size: 14px;
-
+        position: relative;
+        animation: magia 5s infinite ease;        
+        
         svg {
             height: 14px;
         }
     }
-
+    .magic::after , .magic::before {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        padding: 3px;
+        border-radius: 20px;
+        background-image: conic-gradient(#aca8a8 , #7a7878 , #353535 , #ffff , #a8a8a8);
+        z-index: -1;
+        top: 50%;
+        left: 50%;
+        translate: -50% -50%;
+    }
+    .magic::before{
+        filter: blur(10px);
+        opacity: 0.5;
+    }
+   
+    @keyframes magia {
+        0%{
+            transform: rotate(0deg);
+        }
+        50%{
+            transform: rotate(180deg);
+        }
+        100%{
+            transform: rotate(360deg);
+        }
+    }
     .desc {
         font-size: 14px;
     }
@@ -148,7 +216,7 @@ section {
         p {
             font-size: 14px;
             color: var(--cor-fundo);
-            background-color: #cac8c8ec;
+            background-color: #f1efefec;
             border: 1px solid #ffff;
             padding: 3px 6px;
             border-radius: 30px;
@@ -180,6 +248,24 @@ section {
     }
 }
 
+
+.info-right {
+    width: 60%;
+    height: 500px;
+    display: flex;
+    align-items: center;
+
+
+}
+ .robot-3d{
+    /* position: absolute; */
+    width: 100%;
+display: block;
+    height: 790px;
+    margin-bottom: 200px;
+    /* z-index: 10; */
+    /* object-fit: contain; */
+}
 .redes {
     display: flex;
     gap: 20px;
@@ -199,18 +285,6 @@ section {
         height: 16px;
     }
 }
-
-.info-right {
-    width: 50%;
-    height: 500px;
-    display: flex;
-    align-items: center;
-
+.projetos{
+    height: 900px;
 }
- .robot-3d{
-    /* position: absolute; */
-    width: 100%;
- 
-    height: 600px;
-    /* z-index: 10; */
- }
