--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ header {
     backdrop-filter: blur(4px);
     position: fixed;
     border-bottom: 1px solid #424242;
-    z-index: 1;
+    z-index: 2;
 
     nav {
         width: 100%;
@@ -131,7 +131,7 @@ main {
 .info-main{
     background-color: var(--cor-fundo);
     position: relative;
-    z-index: -2;
+    z-index: 1;
 }
 section .content{
     width: 100%;
@@ -154,57 +154,13 @@ section .content{
     flex-direction: column;
     gap: 24px;
     width: 50%;
+    animation: left-in 1.7s ease;
 
     h2 {
         font-size: 40px;
     }
 
-    .magic {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 175px;
-        padding: 5px;
-        border-radius: 20px;
-        color: var(--cor-fundo);
-        background-color: var(--cor-texto);
-        font-size: 14px;
-        position: relative;
-        animation: magia 5s infinite ease;        
-        
-        svg {
-            height: 14px;
-        }
-    }
-    .magic::after , .magic::before {
-        content: "";
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        padding: 3px;
-        border-radius: 20px;
-        background-image: conic-gradient(#aca8a8 , #7a7878 , #353535 , #ffff , #a8a8a8);
-        z-index: -1;
-        top: 50%;
-        left: 50%;
-        translate: -50% -50%;
-    }
-    .magic::before{
-        filter: blur(10px);
-        opacity: 0.5;
-    }
    
-    @keyframes magia {
-        0%{
-            transform: rotate(0deg);
-        }
-        50%{
-            transform: rotate(180deg);
-        }
-        100%{
-            transform: rotate(360deg);
-        }
-    }
     .desc {
         font-size: 14px;
     }
@@ -220,6 +176,7 @@ section .content{
             border: 1px solid #ffff;
             padding: 3px 6px;
             border-radius: 30px;
+            box-shadow: 0 0 5px 2px rgba(255, 255, 255, 0.658);
         }
     }
 
@@ -237,7 +194,7 @@ section .content{
             border-radius: 10px;
             font-size: 14px;
             gap: 5px;
-            box-shadow: 0 0 20px rgba(255, 255, 255, 0.658);
+            box-shadow: 0 0 5px 0px rgba(255, 255, 255, 0.658);
             transition: .2s;
             cursor: pointer;
 
@@ -247,8 +204,69 @@ section .content{
         }
     }
 }
-
-
+@keyframes left-in {
+    from{
+        opacity: 25%;
+        transform: translateY(150px);
+    }
+    to {
+        transform: translateY(0px);
+        opacity: 1;
+    }
+}
+ .box-mag{
+    position: relative;
+    overflow: hidden;
+    background-color:white;
+    display: flex;
+    width: 175px;
+    padding: 2px;
+    border-radius: 20px ;
+    z-index: -2;
+ }
+ .magic {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 175px;
+        padding: 5px;
+        border-radius: 20px;
+        color: var(--cor-fundo);
+        background-color: var(--cor-texto);
+        font-size: 14px;
+        position: relative;
+        
+        svg {
+            height: 14px;
+        }
+    }
+    .magic::after , .magic::before {
+        content: " ";
+        animation: magia 2.5s linear infinite;        
+        position: absolute;
+        width: 9999px;
+        height: 99999px;
+        padding: 3px;
+        border-radius: 20px;
+        background-image: conic-gradient(#aca8a8 , #5c5a5a ,  #353535  , #ffff 90% , #a8a8a8);
+        z-index: -1;
+        top: 50%;
+        left: 50%;
+        translate: -50% -50%;
+    }
+    .magic::before{
+        filter: blur(10px);
+        opacity: 0.5;
+    }
+   
+    @keyframes magia {
+        0%{
+            transform: rotate(0deg);
+        }
+        100%{
+            transform: rotate(360deg);
+        }
+    }
 .info-right {
     width: 60%;
     height: 500px;
@@ -263,8 +281,24 @@ section .content{
 display: block;
     height: 790px;
     margin-bottom: 200px;
+    position: relative;
+    z-index: -3;
+    animation: robo-an 1.7s ease;
+
     /* z-index: 10; */
     /* object-fit: contain; */
+}
+@keyframes robo-an {
+    from{
+        opacity: 25%;
+        transform: translateY(-150px);
+        scale: .5;
+    }
+    to {
+        transform: translateY(0px);
+        opacity: 1;
+        scale: 1;
+    }
 }
 .redes {
     display: flex;
@@ -277,7 +311,7 @@ display: block;
         padding: 10px;
         border-radius: 50%;
         display: flex;
-        box-shadow: 0 0 20px rgba(255, 255, 255, 0.568);
+        box-shadow: 0 0 5px 0px rgba(255, 255, 255, 0.658);
     }
 
     svg {
