--- a/style.css
+++ b/style.css
@@ -149,7 +149,7 @@ section .content {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 10px;
+    gap: 40px;
     /* background-color: var(--cor-fundo); */
 }
 
@@ -180,11 +180,11 @@ section .content {
             font-size: 14px;
             color: var(--cor-fundo);
             background-color: #f1efefec;
-            border: 1px solid #ffff;
+            /* border: 1px solid #ffff; */
             padding: 3px 6px;
             border-radius: 30px;
-            box-shadow: 0 0 2px 2px rgba(255, 255, 255, 0.658);
         }
+       
     }
 
     .inter {
@@ -201,13 +201,17 @@ section .content {
             border-radius: 10px;
             font-size: 14px;
             gap: 5px;
-            box-shadow: 0 0 5px 0px rgba(255, 255, 255, 0.658);
             transition: .2s;
             cursor: pointer;
 
             svg {
                 width: 14px;
             }
+        }
+        a:hover{
+            background-color: #d8d8d8;
+            box-shadow: 0 0 5px 0px rgba(255, 255, 255, 0.658);
+
         }
     }
 }
@@ -299,8 +303,8 @@ section .content {
      animation: if-rgt-img-box 1.5s ease;
 }
 .img-eu{
-    width: 400px;
-    height: 400px;
+    width: 350px;
+    height: 350px;
     object-fit: cover;
     object-position: center;
     border-radius: 50%;
@@ -311,8 +315,8 @@ section .content {
 .if-rgt-img-box::before {
     content: "";
     position: absolute;
-    width: 102%;
-    height: 102%;
+    width: 355px;
+    height: 355px;
     /* padding: 20px; */
     border-radius: 50%;
     background-image: linear-gradient(var(--angulo), #3b3a3b,  #ffffff  , #3b3a3b);
@@ -376,8 +380,53 @@ section .content {
         width: 16px;
         height: 16px;
     }
+     a:hover{
+            background-color: #d8d8d8;
+        }
 }
 
 .projetos {
     height: 900px;
+}
+/* SOBRE MIM */
+ .sobre-mim{
+    display: flex;
+    /* justify-content: center; */
+    margin: 0 auto;
+    flex-direction: row-reverse;
+    width: 100%;
+    max-width: 1150px;
+    gap: 30px;
+    padding: 16px;
+    align-items: center;
+ }
+.sb-left{
+width: 50%;
+display: flex;
+flex-direction: column;
+gap: 20px;
+flex: 1;
+h3{
+    font-size: 13px;
+    font-weight: 500;
+    text-transform: uppercase;
+    text-align: end;
+}
+h4{
+    font-size: 24px;  
+    max-width: 270px;  
+    margin: 0 0 0 auto;
+    text-align: end;
+    padding-bottom: 10px;
+    border-bottom: 1px solid black;
+}
+}
+.sb-right{
+    
+    img{
+        width: 400px;
+        aspect-ratio: 1/1;
+        border-radius: 50%;
+        box-shadow: 0 0 10px 3px rgb(73, 73, 73);
+    }
 }
