--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ header {
     margin-top: 20px;
     /* border-bottom: 1px solid #424242; */
     z-index: 2;
-    
+
     nav {
         backdrop-filter: blur(4px);
         background-color: rgba(41, 41, 41, 0.24);
@@ -49,7 +49,7 @@ header {
         max-width: 550px;
         display: flex;
         align-items: center;
-        justify-content:center;
+        justify-content: center;
         padding: 10px 20px;
         border-radius: 50px;
         box-shadow: 0 2px 8px rgba(255, 255, 255, 0.1);
@@ -67,7 +67,7 @@ header {
         list-style: none;
         align-items: center;
         gap: 20px;
-        
+
     }
 
     li a {
@@ -188,7 +188,7 @@ section .content {
             padding: 3px 6px;
             border-radius: 30px;
         }
-       
+
     }
 
     .inter {
@@ -212,7 +212,8 @@ section .content {
                 width: 14px;
             }
         }
-        a:hover{
+
+        a:hover {
             background-color: #d8d8d8;
             box-shadow: 0 0 5px 0px rgba(255, 255, 255, 0.658);
 
@@ -257,13 +258,13 @@ section .content {
     height: 100%;
     padding: 2px;
     border-radius: 20px;
-    background-image: linear-gradient(var(--angulo), #3b3a3b,  #ffffff , #3b3a3b);
+    background-image: linear-gradient(var(--angulo), #3b3a3b, #ffffff, #3b3a3b);
     z-index: -1;
     top: 50%;
     left: 50%;
     translate: -50% -50%;
     animation: magia 3s linear infinite;
-    
+
 }
 
 .magic::before {
@@ -281,9 +282,11 @@ section .content {
     0% {
         --angulo: 0deg;
     }
- 85%{
-     --angulo: 306deg;
- }
+
+    85% {
+        --angulo: 306deg;
+    }
+
     to {
         --angulo: 360deg;
     }
@@ -300,13 +303,14 @@ section .content {
 
 .if-rgt-img-box {
     width: 100%;
-    height: 400px;
+    height: auto;
     display: flex;
     align-items: center;
     position: relative;
-     animation: if-rgt-img-box 1.5s ease;
+    animation: if-rgt-img-box 1.5s ease;
 }
-.img-eu{
+
+.img-eu {
     width: 350px;
     height: 350px;
     object-fit: cover;
@@ -315,6 +319,7 @@ section .content {
     aspect-ratio: 1/1;
     animation: if-rgt-img-box 1.7s ease;
 }
+
 .if-rgt-img-box::after,
 .if-rgt-img-box::before {
     content: "";
@@ -323,35 +328,40 @@ section .content {
     height: 355px;
     /* padding: 20px; */
     border-radius: 50%;
-    background-image: linear-gradient(var(--angulo), #3b3a3b,  #ffffff  , #3b3a3b);
+    background-image: linear-gradient(var(--angulo), #3b3a3b, #ffffff, #3b3a3b);
     z-index: -1;
     top: 50%;
     left: 50%;
     translate: -50% -50%;
     animation: magicu 3s linear infinite;
-    
+
 }
 
 .if-rgt-img-box::before {
     filter: blur(10px);
     opacity: 0.3;
 }
+
 @property --angulo {
     syntax: "<angle>";
     initial-value: 0deg;
     inherits: false;
 }
+
 @keyframes magicu {
     0% {
         --angulo: 0deg;
     }
- 85%{
-     --angulo: 306deg;
- }
+
+    85% {
+        --angulo: 306deg;
+    }
+
     to {
         --angulo: 360deg;
     }
 }
+
 @keyframes if-rgt-img-box {
     from {
         opacity: 25%;
@@ -384,21 +394,24 @@ section .content {
         width: 16px;
         height: 16px;
     }
-     a:hover{
-            background-color: #d8d8d8;
-        }
+
+    a:hover {
+        background-color: #d8d8d8;
+    }
 }
 
 .projetos {
     height: 900px;
 }
+
 /* SOBRE MIM */
-.sobre-mim{
+.sobre-mim {
     width: 100%;
-        background-color: #3d3d3dfb;
+    background-color: #3d3d3dfb;
 
 }
- .sb-mim-content{
+
+.sb-mim-content {
     display: flex;
     /* justify-content: center; */
     margin: 0 auto;
@@ -408,37 +421,53 @@ section .content {
     gap: 30px;
     padding: 40px 16px;
     align-items: center;
- }
-.sb-left{
+}
+
+.sb-left {
     color: var(--cor-texto);
-width: 50%;
-display: flex;
-flex-direction: column;
-gap: 20px;
-flex: 1;
-h3{
-    font-size: 16px;
-    font-weight: 300;
-    text-transform: uppercase;
-    text-align: end;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    flex: 1;
+
+    h3 {
+        font-size: 16px;
+        font-weight: 300;
+        text-transform: uppercase;
+        text-align: end;
+    }
+
+    h4 {
+        font-size: 24px;
+        max-width: 330px;
+        margin: 0 0 0 auto;
+        text-align: end;
+        padding-bottom: 10px;
+        border-bottom: 1px solid rgba(245, 244, 244, 0.13);
+    }
+
+    h4::before {
+        content: "";
+        width: 70%;
+        height: 1px;
+        background-color: #9e9c9c;
+        position: absolute;
+        bottom: -5px;
+        left: 50%;
+        translate: -50%;
+    }
+
+    p {
+        padding: 30px 0;
+        font-size: 13px;
+        line-height: 1.9;
+    }
 }
-h4{
-    font-size: 24px;  
-    max-width: 330px;  
-    margin: 0 0 0 auto;
-    text-align: end;
-    padding-bottom: 10px;
-    border-bottom: 1px solid rgba(245, 244, 244, 0.13);
-}
-p{
-    padding: 30px 0;
-    font-size: 13px;
-    line-height: 1.9;
-}
-}
-.sb-right{
-    
-    img{
+
+.sb-right {
+
+    img {
         width: 300px;
         aspect-ratio: 1/1;
         border-radius: 50%;
@@ -448,41 +477,46 @@ p{
 
 /* PROJETOS  */
 
-.projetos-my{
+.projetos-my {
     width: 100%;
-    background-color: var(--cor-fundo) ;
+    background-color: var(--cor-fundo);
 
 }
-.content-projects{
+
+.content-projects {
     width: 100%;
     max-width: 1150px;
     margin: 0 auto;
-    padding: 32px 16px;
+    padding: 52px 16px;
     color: var(--cor-texto);
 
 }
-.titleinfo{
+
+.titleinfo {
     text-align: center;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 10px;
-    h3{
+
+    h3 {
         font-weight: 400;
         text-transform: uppercase;
         font-size: 14px;
         line-height: 1;
         color: rgb(208, 209, 208);
     }
-    h4{
+
+    h4 {
         font-size: 24px;
         /* padding: 10px; */
         line-height: 1;
         position: relative;
         margin-bottom: 20px;
     }
-    h4::before{
+
+    h4::before {
         content: "";
         width: 70%;
         height: 1px;
@@ -492,30 +526,33 @@ p{
         left: 50%;
         translate: -50%;
     }
-    p{
+
+    p {
         width: 600px;
         font-size: 13px;
     }
 }
-.uni-projects{
+
+.uni-projects {
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
     padding-top: 20px;
 
 }
-.pro-box{
+
+.pro-box {
     flex: 0 0 calc((100% - 60px) /3);
     display: flex;
     flex-direction: column;
     background-color: #252525;
     /* align-items: center; */
-    padding:16px 16px;
+    padding: 16px 16px;
     border-radius: 16px;
     box-shadow: 0 0 10px 0px rgba(255, 255, 255, 0.13);
     transition: .2s ease;
 
-    img{
+    img {
         width: 100%;
         border-radius: 16px;
         object-fit: cover;
@@ -524,41 +561,48 @@ p{
         margin-bottom: 15px;
 
     }
-    h5{
+
+    h5 {
         font-size: 19px;
         color: #ffffff;
         margin-bottom: 8px;
         line-height: 1;
     }
-    p{
+
+    p {
         font-size: 13px;
         margin-bottom: 10px;
     }
-    .tecs-info{
+
+    .tecs-info {
         display: flex;
         gap: 10px;
         margin-bottom: 20px;
-        p{
+
+        p {
             padding: 3px 6px;
             background-color: #686666;
             border-radius: 8px;
             margin: 0;
-            
+
         }
     }
 }
-.pro-box:hover{
+
+.pro-box:hover {
     scale: 1.05;
     box-shadow: 0 0 10px 0px rgba(255, 255, 255, 0.301);
 }
-.ver-projeto{
+
+.ver-projeto {
     display: flex;
     flex-direction: row;
     gap: 20px;
-    a{
+
+    a {
         text-decoration: none;
         color: #d8d8d8;
-        padding:3px 10px;
+        padding: 3px 10px;
         background-color: #1f1f1f;
         border-radius: 18px;
         transition: .3s ease;
@@ -567,29 +611,32 @@ p{
         align-items: center;
         gap: 5px;
     }
-    a:hover{
-      background-color: #424242;  
+
+    a:hover {
+        background-color: #424242;
     }
 }
-.servi{
+
+.servi {
     text-align: center;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 10px;
-    padding: 32px 16px;
+    padding: 52px 16px;
     color: var(--cor-texto);
-    background-color:#3d3d3dfb;
+    background-color: #3d3d3dfb;
 
-    h3{
+    h3 {
         font-weight: 400;
         text-transform: uppercase;
         font-size: 14px;
         line-height: 1;
         color: rgb(208, 209, 208);
     }
-    h4{
+
+    h4 {
         font-size: 24px;
         /* padding: 10px; */
         line-height: 1;
@@ -597,7 +644,8 @@ p{
         margin-bottom: 20px;
 
     }
-    h4::before{
+
+    h4::before {
         content: "";
         width: 70%;
         height: 1px;
@@ -608,14 +656,15 @@ p{
         translate: -50%;
     }
 }
-.serv-me{
+
+.serv-me {
     width: 100%;
     max-width: 1000px;
     display: flex;
     gap: 30px;
     flex-wrap: wrap;
 
-    article{
+    article {
         flex: 0 0 calc((100% - 90px) / 4);
         background-color: #646464;
         padding: 10px;
@@ -624,45 +673,355 @@ p{
         transition: .2s ease;
         position: relative;
         overflow: hidden;
-        img{
+
+        img {
             width: 100px;
             height: 100px;
             margin-bottom: 15px;
         }
-        .title-serv{
+
+        .title-serv {
             font-size: 19px;
             font-weight: bold;
             margin-bottom: 10px;
             color: #acbdf5;
         }
-        .dec-title-serv{
+
+        .dec-title-serv {
             font-size: 14px;
             padding-bottom: 20px;
         }
     }
-    article:hover{
+
+    article:hover {
         scale: 1.05;
     }
-    article:hover .title-serv{
+
+    article:hover .title-serv {
         color: #1d1d1d;
     }
-    article:hover .dec-title-serv{
+
+    article:hover .dec-title-serv {
         color: #1d1d1d;
     }
-    article::before{
+
+    article::before {
         content: "";
         position: absolute;
         width: 0%;
         height: 100%;
         background-color: #c0bebe;
         top: 0;
-       left: 0;
+        left: 0;
         z-index: -1;
         transition: .3s ease;
     }
-    article:hover::before{
+
+    article:hover::before {
         content: "";
         width: 100%;
-        
+
+    }
+}
+
+.contact {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 32px 16px;
+    background-color: var(--cor-fundo);
+    color: white;
+
+    h3 {
+        font-weight: 400;
+        text-transform: uppercase;
+        font-size: 14px;
+        line-height: 1;
+        color: rgb(208, 209, 208);
+        margin-bottom: 10px;
+    }
+
+    h4 {
+        font-size: 24px;
+        /* padding: 10px; */
+        line-height: 1;
+        position: relative;
+        margin-bottom: 20px;
+
+    }
+
+    .inf {
+        display: flex;
+        width: 100%;
+        max-width: 1000px;
+        gap: 50px;
+
+    }
+
+    .ctt-left {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        flex: 0 0 calc((100% - 50px)/ 2);
+
+        .p-prin {
+            margin-bottom: 20px;
+        }
+
+        .redes {
+            margin-top: 0;
+        }
+
+    }
+
+    .info-box1 {
+        p {
+            display: flex;
+            gap: 10px;
+            align-items: center;
+        }
+    }
+
+    .redes {
+        display: flex;
+        gap: 20px;
+        margin-top: 30px;
+
+        a {
+            color: var(--cor-fundo);
+            background-color: rgb(141, 141, 141);
+            padding: 10px;
+            border-radius: 50%;
+            display: flex;
+            box-shadow: 0 0 5px 0px rgba(255, 255, 255, 0.658);
+            transition: .3s ease;
+        }
+
+        svg {
+            width: 16px;
+            height: 16px;
+        }
+
+        .github:hover {
+            background-color: #1a1919;
+            color: #ffff;
+            transform: translateY(-3px);
+        }
+
+        .linkedin:hover {
+            background-color: #2e80eb;
+            color: #ffff;
+            transform: translateY(-3px);
+        }
+
+        .insta:hover {
+            background: conic-gradient(#7f51e9 0deg,
+                    #b14cf0 60deg,
+                    #e90cb2 140deg,
+                    #ff0c0c 220deg,
+                    #f78b30 290deg,
+                    #7f51e9 360deg);
+
+            color: #ffff;
+            transform: translateY(-3px);
+        }
+    }
+}
+
+.ctt-right {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-width: 50%;
+    gap: 20px;
+
+    /* align-items: center; */
+    /* input , textarea{
+        width: 100%;
+    } */
+    .ctt-in {
+        padding: 10px 13px;
+        outline: none;
+        background-color: var(--cor-fundo);
+        border: 1px solid #ccc;
+        border-radius: 8px;
+        color: rgb(212, 212, 212);
+    }
+
+    .ctt-msg {
+        padding: 10px 13px;
+        outline: none;
+        background-color: var(--cor-fundo);
+        border: 1px solid #ccc;
+        border-radius: 8px;
+        min-height: 80px;
+        color: rgb(212, 212, 212);
+    }
+
+    .ctt-sub {
+        width: 150px;
+        padding: 10px;
+        border-radius: 8px;
+        outline: none;
+        border: none;
+        background-color: #e6e6e6;
+        transition: .3s ease;
+        cursor: pointer;
+    }
+
+    .ctt-sub:hover {
+        background-color: #b3b3b3;
+    }
+
+}
+
+@media screen and (max-width : 900px) {
+    .content {
+        flex-direction: column-reverse;
+        padding: 130px 16px 40px;
+
+        .info-left {
+            align-items: center;
+            width: 100%;
+
+            h2 {
+                font-size: 50px;
+            }
+
+            .desc {
+                text-align: center;
+            }
+        }
+
+        .info-right {
+            height: auto;
+        }
+    }
+
+    .pro-box {
+        flex: 0 0 calc((100% - 30px) / 2);
+    }
+
+    .servi article {
+        flex: 0 0 calc((100% - 30px) / 2);
+    }
+}
+
+@media screen and (max-width : 588px) {
+    header nav {
+        display: none;
+    }
+
+    .content {
+        flex-direction: column;
+        padding: 60px 16px 40px;
+
+        .info-left {
+            align-items: center;
+            width: 100%;
+
+            h2 {
+                font-size: 30px;
+            }
+
+            .desc {
+                text-align: center;
+            }
+        }
+
+        .tecs {
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+
+        .info-right {
+            height: auto;
+
+            .img-eu {
+                width: 250px;
+                height: 250px;
+            }
+        }
+
+        .if-rgt-img-box::after,
+        .if-rgt-img-box::before {
+            content: "";
+            position: absolute;
+            width: 255px;
+            height: 255px;
+            /* padding: 20px; */
+            border-radius: 50%;
+            background-image: linear-gradient(var(--angulo), #3b3a3b, #ffffff, #3b3a3b);
+            z-index: -1;
+            top: 50%;
+            left: 50%;
+            translate: -50% -50%;
+            animation: magicu 3s linear infinite;
+
+        }
+    }
+
+    /* .uni-projects{
+        gap: 0;
+    } */
+    .pro-box {
+        flex: 0 0 calc((100%) / 1);
+    }
+
+    .inf {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .titleinfo p {
+        width: 100%;
+    }
+
+    .redes {
+        justify-content: center;
+    }
+
+    .ctt-right {
+        max-width: 100%;
+    }
+
+    .ctt-in {
+        width: 100%;
+    }
+
+    .sb-mim-content {
+        flex-direction: column;
+        align-items: center;
+
+        .sb-left {
+            width: 100%;
+            h3{
+                text-align: center;
+            }
+            h4 {
+                text-align: center;
+                font-size: 24px;
+                max-width: 330px;
+                /* margin: 0 0 0 auto; */
+                /* text-align: end; */
+                padding-bottom: 10px;
+                /* border-bottom: 1px solid rgba(245, 244, 244, 0.13); */
+                border-bottom: none;
+                position: relative;
+            }
+
+            h4::before {
+                content: "";
+                width: 70%;
+                height: 1px;
+                background-color: #9e9c9c;
+                position: absolute;
+                bottom: -5px;
+                left: 50%;
+                translate: -50%;
+            }
+        }
     }
 }
